# moscowrest

./: .gitignore  README.md  pyproject.toml
notebooks/: .gitignore  Dostoevsky.ipynb  FinalData.ipynb  MosData.ipynb  MoscowRest.ipynb  SampleNotebook.ipynb  SentimentAnalysis.ipynb  SentimentComparison.ipynb  SentimentResult.ipynb
resources/: recources.md
src/: sample_main.py
src/src_rest/api/: mosapi.py  utils.py
src/src_rest/loaders/: data_loaders_api.py  data_loaders_scrapy.py  utils.py
src/src_rest/models/: models.py
src/src_rest/scrapying/: scrapers.py  utils.py
src/src_rest/tests/: test_api.py  test_loaders.py  test_models.py  test_scrapying.py  test_transform.py
src/src_rest/transformers/: transform.py  transform_mos_rest.py  transform_mosdata.py  utils.py
workflows/collect_mosdata/: Snakefile
